[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Items/items_sheet.png" type="Texture" id=1]
[ext_resource path="res://Resorces/Static/Items/Gems/Gem.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.0
height = 1.93068

[sub_resource type="Animation" id=2]
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -3 ), Vector2( 0, 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColectArea:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -3 ), Vector2( 0, 3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ParticlesSpawn:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -3 ), Vector2( 0, 3 ) ]
}

[node name="GemRedMedium" type="Node2D"]
script = ExtResource( 2 )
color = 1

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 115, 2, 10, 12 )

[node name="ColectArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ColectArea"]
shape = SubResource( 1 )

[node name="ParticlesSpawn" type="Node2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "bounce"
anims/bounce = SubResource( 2 )
[connection signal="body_entered" from="ColectArea" to="." method="_on_ColectArea_body_entered"]
